--- a/ZenithClientSite/src/app/zenith-event/zenith-event.component.html
+++ b/ZenithClientSite/src/app/zenith-event/zenith-event.component.html
@@ -1,9 +1,9 @@
 <div>
-  <h1>Showing Events for the week of {{ weekOf | date }}</h1>
+  <h1>Showing Events for the week of {{ weekOf | date:'MMM dd, yyyy':'UTC' }}</h1>
   <table>
     <div *ngFor="let day of groupedEvents; let i=index">
       <div *ngIf="day.length > 0">
-        <tr><th>{{ day[0].eventDate | date }}</th></tr>
+        <tr><th>{{ day[0].eventDate | date:'MMM dd, yyyy':'UTC' }}</th></tr>
         <tr *ngFor="let event of day">
           <td>{{ event.startTime }} - {{ event.endTime }}</td>
           <td>{{ event.activityDescription }} </td>
