--- a/ZenithWebSite/Views/ActivityCategories/Create.cshtml
+++ b/ZenithWebSite/Views/ActivityCategories/Create.cshtml
@@ -1,12 +1,15 @@
-﻿@model ZenithWebSite.Models.ZenithModel.ActivityCategory
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer _Localizer
+
+@model ZenithWebSite.Models.ZenithModel.ActivityCategory
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = _Localizer["Create"];
 }
 
-<h2>Create</h2>
+<h2>@_Localizer["Create"]</h2>
 
-<h4>ActivityCategory</h4>
+<h4>@_Localizer["Activity Category"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,14 +21,14 @@
                 <span asp-validation-for="ActivityDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="@_Localizer["Create"]" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">@_Localizer["Back to List"]</a>
 </div>
 
 @section Scripts {
